cmake_minimum_required(VERSION 3.25)
project(150__Days_Of_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(150__Days_Of_CPP
        Day29/compliment.cpp
        Day29/palindrome.cpp
        Day29/reverse.cpp
        012sort.cpp
        1st.cpp
        2darray.cpp
        3largestno.cpp
        algorithmstl.cpp
        arraychallenge.cpp
        arraypass.cpp
        arraypractice.cpp
        arraystl.cpp
        binarytodecimal.cpp
        bitwiseoprator.cpp
        bookallocation.cpp
        bserch.cpp
        bubblesort.cpp
        bubblesort1.cpp
        chararray.cpp
        chararray2.cpp
        condition.cpp
        dequestl.cpp
        dsa1.cpp
        dsa2.cpp
        findmaxk.cpp
        findunique.cpp
        firstandlast.cpp
        hexadecitodeci.cpp
        insertionsort.cpp
        insertionsort1.cpp
        largest.cpp
        leeoce43.cpp
        leetcode.cpp
        leetcode10.cpp
        leetcode11.cpp
        leetcode12.cpp
        leetcode13.cpp
        leetcode14.cpp
        leetcode15.cpp
        leetcode16.cpp
        leetcode17.cpp
        leetcode18.cpp
        leetcode19.cpp
        leetcode20.cpp
        leetcode21.cpp
        leetcode22.cpp
        leetcode23.cpp
        leetcode24.cpp
        leetcode25.cpp
        leetcode26.cpp
        leetcode27.cpp
        leetcode28.cpp
        leetcode29.cpp
        leetcode30.cpp
        leetcode31.cpp
        leetcode32.cpp
        leetcode33.cpp
        leetcode34.cpp
        leetcode35.cpp
        leetcode36.cpp
        leetcode37.cpp
        leetcode38.cpp
        leetcode39.cpp
        leetcode40.cpp
        leetcode41.cpp
        leetcode42.cpp
        leetcode43.cpp
        leetcode44.cpp
        leetcode45.cpp
        leetcode46.cpp
        leetcode47.cpp
        leetcode48.cpp
        leetcode49.cpp
        leetcode5.cpp
        leetcode50.cpp
        leetcode52.cpp
        leetcode53.cpp
        leetcode54.cpp
        leetcode6.cpp
        leetcode7.cpp
        leetcode8.cpp
        leetcode9.cpp
        leetcode_2614.cpp
        leetcode_5inone.cpp
        leetcodeday3.cpp
        leetcodeday4.cpp
        leetcodedday2.cpp
        leetcodeproblem2652.cpp
        lineare.cpp
        liststl.cpp
        longestarithmaticsybarray.cpp
        mapstl.cpp
        maximumoccuring.cpp
        mergesortedarray.cpp
        movezeroes.cpp
        ncr.cpp
        note.cpp
        numbersystem.cpp
        o1short.cpp
        octaltodecimal.cpp
        pattern.cpp
        pattern10.cpp
        pattern11.cpp
        pattern12.cpp
        pattern13.cpp
        pattern14.cpp
        pattern16.cpp
        pattern2.cpp
        pattern3.cpp
        pattern5.cpp
        pattern6.cpp
        pattern7.cpp
        pattern8.cpp
        pattern9.cpp
        pivotele.cpp
        prime.cpp
        priorityqueuestl.cpp
        problem1.cpp
        problem3.cpp
        project1.cpp
        project10.cpp
        project11.cpp
        PROJECT12.cpp
        project13.cpp
        project2.cpp
        project2_modification.cpp
        project3.cpp
        project4.cpp
        project5.cpp
        project6.cpp
        project7.cpp
        project8.cpp
        project9.cpp
        pythogoriantriplet.cpp
        queuestl.cpp
        replacespaces2.cpp
        reverrsearray.cpp
        reverseanarray.cpp
        reversethearray.cpp
        rplacespaces.cpp
        secondproblem.cpp
        segmentedsieve.cpp
        selectionsort.cpp
        selectionsort1.cpp
        setstl.cpp
        singlenumber3.cpp
        sortColors.cpp
        stackstl.cpp
        sumofsubarray.cpp
        swapalter.cpp
        swichstatement.cpp
        switch.cpp
        tempCodeRunnerFile.cpp
        times.cpp
        triplet.cpp
        vectorstl.cpp leetcode55.cpp)
